Fix answer options and onclick handlers in quiz

--- a/Master_Quiz_1_Complete.html
+++ b/Master_Quiz_1_Complete.html
@@ -1957,13 +1957,13 @@
                 stayed with the game plan,” she is using a/an __________ to a measure performance, even though in terms
                 of outcomes her team lost.</div>
             <ul class="options-list">
-                <li class="option-item" data-opt="a" onclick="checkAnswer('qch9_q2', 'a', 'a')"><strong>(a)</strong>
+                <li class="option-item" data-opt="a" onclick="checkAnswer('qch9_q2', 'a', 'b')"><strong>(a)</strong>
                     input standard</li>
-                <li class="option-item" data-opt="b" onclick="checkAnswer('qch9_q2', 'b', 'a')"><strong>(b)</strong>
+                <li class="option-item" data-opt="b" onclick="checkAnswer('qch9_q2', 'b', 'b')"><strong>(b)</strong>
                     output standard</li>
-                <li class="option-item" data-opt="c" onclick="checkAnswer('qch9_q2', 'c', 'a')"><strong>(c)</strong>
+                <li class="option-item" data-opt="c" onclick="checkAnswer('qch9_q2', 'c', 'b')"><strong>(c)</strong>
                     historical comparison</li>
-                <li class="option-item" data-opt="d" onclick="checkAnswer('qch9_q2', 'd', 'a')"><strong>(d)</strong>
+                <li class="option-item" data-opt="d" onclick="checkAnswer('qch9_q2', 'd', 'b')"><strong>(d)</strong>
                     relative comparison</li>
             </ul>
             <div class="answer-reveal">
@@ -2442,13 +2442,13 @@
             <div class="question-text">In Porter’s five forces framework, having __________ increases industry
                 attractiveness.</div>
             <ul class="options-list">
-                <li class="option-item" data-opt="a" onclick="checkAnswer('qch10_q8', 'a', 'd')"><strong>(a)</strong>
+                <li class="option-item" data-opt="a" onclick="checkAnswer('qch10_q8', 'a', 'c')"><strong>(a)</strong>
                     many rivals</li>
-                <li class="option-item" data-opt="b" onclick="checkAnswer('qch10_q8', 'b', 'd')"><strong>(b)</strong>
+                <li class="option-item" data-opt="b" onclick="checkAnswer('qch10_q8', 'b', 'c')"><strong>(b)</strong>
                     many substitute products</li>
-                <li class="option-item" data-opt="c" onclick="checkAnswer('qch10_q8', 'c', 'd')"><strong>(c)</strong>
+                <li class="option-item" data-opt="c" onclick="checkAnswer('qch10_q8', 'c', 'c')"><strong>(c)</strong>
                     low bargaining power of suppliers</li>
-                <li class="option-item" data-opt="d" onclick="checkAnswer('qch10_q8', 'd', 'd')"><strong>(d)</strong>
+                <li class="option-item" data-opt="d" onclick="checkAnswer('qch10_q8', 'd', 'c')"><strong>(d)</strong>
                     few barriers to entry</li>
             </ul>
             <div class="answer-reveal">
@@ -2511,13 +2511,13 @@
             <div class="question-text">The two questions asked by Porter to identify competitive strategies for a
                 business or product line are: 1—What is the market scope? 2—What is the __________?</div>
             <ul class="options-list">
-                <li class="option-item" data-opt="a" onclick="checkAnswer('qch10_q11', 'a', 'b')"><strong>(a)</strong>
+                <li class="option-item" data-opt="a" onclick="checkAnswer('qch10_q11', 'a', 'a')"><strong>(a)</strong>
                     market share</li>
-                <li class="option-item" data-opt="b" onclick="checkAnswer('qch10_q11', 'b', 'b')"><strong>(b)</strong>
+                <li class="option-item" data-opt="b" onclick="checkAnswer('qch10_q11', 'b', 'a')"><strong>(b)</strong>
                     source of competitive advantage</li>
-                <li class="option-item" data-opt="c" onclick="checkAnswer('qch10_q11', 'c', 'b')"><strong>(c)</strong>
+                <li class="option-item" data-opt="c" onclick="checkAnswer('qch10_q11', 'c', 'a')"><strong>(c)</strong>
                     core competency</li>
-                <li class="option-item" data-opt="d" onclick="checkAnswer('qch10_q11', 'd', 'b')"><strong>(d)</strong>
+                <li class="option-item" data-opt="d" onclick="checkAnswer('qch10_q11', 'd', 'a')"><strong>(d)</strong>
                     industry attractiveness</li>
             </ul>
             <div class="answer-reveal">
@@ -2811,13 +2811,13 @@
             <div class="question-text">Better lower-level teamwork and more top-level strategic management are among the
                 expected advantages of a __________ structure.</div>
             <ul class="options-list">
-                <li class="option-item" data-opt="a" onclick="checkAnswer('qch11_q9', 'a', 'd')"><strong>(a)</strong>
+                <li class="option-item" data-opt="a" onclick="checkAnswer('qch11_q9', 'a', 'b')"><strong>(a)</strong>
                     divisional</li>
-                <li class="option-item" data-opt="b" onclick="checkAnswer('qch11_q9', 'b', 'd')"><strong>(b)</strong>
+                <li class="option-item" data-opt="b" onclick="checkAnswer('qch11_q9', 'b', 'b')"><strong>(b)</strong>
                     matrix</li>
-                <li class="option-item" data-opt="c" onclick="checkAnswer('qch11_q9', 'c', 'd')"><strong>(c)</strong>
+                <li class="option-item" data-opt="c" onclick="checkAnswer('qch11_q9', 'c', 'b')"><strong>(c)</strong>
                     geographical</li>
-                <li class="option-item" data-opt="d" onclick="checkAnswer('qch11_q9', 'd', 'd')"><strong>(d)</strong>
+                <li class="option-item" data-opt="d" onclick="checkAnswer('qch11_q9', 'd', 'b')"><strong>(d)</strong>
                     product</li>
             </ul>
             <div class="answer-reveal">
@@ -3136,13 +3136,13 @@
             <div class="question-text">An executive pursuing transformational change would give highest priority to
                 which one of these change targets?</div>
             <ul class="options-list">
-                <li class="option-item" data-opt="a" onclick="checkAnswer('qch12_q8', 'a', 'b')"><strong>(a)</strong> an
+                <li class="option-item" data-opt="a" onclick="checkAnswer('qch12_q8', 'a', 'd')"><strong>(a)</strong> an
                     out-of-date policy</li>
-                <li class="option-item" data-opt="b" onclick="checkAnswer('qch12_q8', 'b', 'b')"><strong>(b)</strong>
+                <li class="option-item" data-opt="b" onclick="checkAnswer('qch12_q8', 'b', 'd')"><strong>(b)</strong>
                     the organizational culture</li>
-                <li class="option-item" data-opt="c" onclick="checkAnswer('qch12_q8', 'c', 'b')"><strong>(c)</strong> a
+                <li class="option-item" data-opt="c" onclick="checkAnswer('qch12_q8', 'c', 'd')"><strong>(c)</strong> a
                     new information system</li>
-                <li class="option-item" data-opt="d" onclick="checkAnswer('qch12_q8', 'd', 'b')"><strong>(d)</strong>
+                <li class="option-item" data-opt="d" onclick="checkAnswer('qch12_q8', 'd', 'd')"><strong>(d)</strong>
                     job designs in a customer service department</li>
             </ul>
             <div class="answer-reveal">
