--- a/Master_Quiz_1_Complete.html
+++ b/Master_Quiz_1_Complete.html
@@ -1967,7 +1967,7 @@
                     relative comparison</li>
             </ul>
             <div class="answer-reveal">
-                <div><span class="correct-label">Correct Answer:</span> <strong>(a)</strong></div>
+                <div><span class="correct-label">Correct Answer:</span> <strong>(b)</strong></div>
                 <div class="justification">Input standard measures effort/adherence to plan, not result.</div>
             </div>
         </div>
@@ -2452,7 +2452,7 @@
                     few barriers to entry</li>
             </ul>
             <div class="answer-reveal">
-                <div><span class="correct-label">Correct Answer:</span> <strong>(d)</strong></div>
+                <div><span class="correct-label">Correct Answer:</span> <strong>(c)</strong></div>
                 <div class="justification">Barriers to entry make it hard for new rivals, protecting profits.</div>
             </div>
         </div>
@@ -2521,7 +2521,7 @@
                     industry attractiveness</li>
             </ul>
             <div class="answer-reveal">
-                <div><span class="correct-label">Correct Answer:</span> <strong>(b)</strong></div>
+                <div><span class="correct-label">Correct Answer:</span> <strong>(a)</strong></div>
                 <div class="justification">Source of difference (Cost vs Uniqueness) and Market Scope (Broad vs Narrow).
                 </div>
             </div>
@@ -2821,7 +2821,7 @@
                     product</li>
             </ul>
             <div class="answer-reveal">
-                <div><span class="correct-label">Correct Answer:</span> <strong>(d)</strong></div>
+                <div><span class="correct-label">Correct Answer:</span> <strong>(b)</strong></div>
                 <div class="justification">Product structure allows experts to focus on product, improving
                     teamwork/strategy.</div>
             </div>
@@ -3136,13 +3136,13 @@
             <div class="question-text">An executive pursuing transformational change would give highest priority to
                 which one of these change targets?</div>
             <ul class="options-list">
-                <li class="option-item" data-opt="a" onclick="checkAnswer('qch12_q8', 'a', 'd')"><strong>(a)</strong> an
+                <li class="option-item" data-opt="a" onclick="checkAnswer('qch12_q8', 'a', 'b')"><strong>(a)</strong> an
                     out-of-date policy</li>
-                <li class="option-item" data-opt="b" onclick="checkAnswer('qch12_q8', 'b', 'd')"><strong>(b)</strong>
+                <li class="option-item" data-opt="b" onclick="checkAnswer('qch12_q8', 'b', 'b')"><strong>(b)</strong>
                     the organizational culture</li>
-                <li class="option-item" data-opt="c" onclick="checkAnswer('qch12_q8', 'c', 'd')"><strong>(c)</strong> a
+                <li class="option-item" data-opt="c" onclick="checkAnswer('qch12_q8', 'c', 'b')"><strong>(c)</strong> a
                     new information system</li>
-                <li class="option-item" data-opt="d" onclick="checkAnswer('qch12_q8', 'd', 'd')"><strong>(d)</strong>
+                <li class="option-item" data-opt="d" onclick="checkAnswer('qch12_q8', 'd', 'b')"><strong>(d)</strong>
                     job designs in a customer service department</li>
             </ul>
             <div class="answer-reveal">
@@ -3159,17 +3159,17 @@
             <div class="question-text">__________ change results in a major change of direction for an organization,
                 while __________ change makes small adjustments to current ways of doing things.</div>
             <ul class="options-list">
-                <li class="option-item" data-opt="a" onclick="checkAnswer('qch12_q9', 'a', 'c')"><strong>(a)</strong>
+                <li class="option-item" data-opt="a" onclick="checkAnswer('qch12_q9', 'a', 'd')"><strong>(a)</strong>
                     Frame breaking; radical</li>
-                <li class="option-item" data-opt="b" onclick="checkAnswer('qch12_q9', 'b', 'c')"><strong>(b)</strong>
+                <li class="option-item" data-opt="b" onclick="checkAnswer('qch12_q9', 'b', 'd')"><strong>(b)</strong>
                     Frame bending; incremental</li>
-                <li class="option-item" data-opt="c" onclick="checkAnswer('qch12_q9', 'c', 'c')"><strong>(c)</strong>
+                <li class="option-item" data-opt="c" onclick="checkAnswer('qch12_q9', 'c', 'd')"><strong>(c)</strong>
                     Transformational; frame breaking</li>
-                <li class="option-item" data-opt="d" onclick="checkAnswer('qch12_q9', 'd', 'c')"><strong>(d)</strong>
+                <li class="option-item" data-opt="d" onclick="checkAnswer('qch12_q9', 'd', 'd')"><strong>(d)</strong>
                     Transformational; incremental</li>
             </ul>
             <div class="answer-reveal">
-                <div><span class="correct-label">Correct Answer:</span> <strong>(c)</strong></div>
+                <div><span class="correct-label">Correct Answer:</span> <strong>(d)</strong></div>
                 <div class="justification">Transformational (Major/Frame Breaking) vs Incremental (Frame Bending).</div>
             </div>
         </div>
